--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <div id="dollar_par_sec">
                     <p>Vous générez </p><p id="score_par_sec">0</p><p> $ par seconde !</p>
                 </div>
+                <span id="dollars">
                 <img src="image/dollar.png" onclick="ajouter()" id="bouton_principal">
+                </span>
                 
                 <div id="bourse">
                     <p>Vous avez </p><p id="clics">0</p><p> $</p>
