--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
             <a href="index.html">Reset</a>
             <a>Dollar Clicker</a>
-            <a>???</a>
+            <a href="https://dcjetc.com/meriadec-legal/">Dec</a><a href="https://kilyantual.github.io/">Awikz</a>
         
         </header>
         <div class="page">
