--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             
             <a href="index.html">Reset</a>
-            <a>Dollar Clicker</a>
+            <a id="titre">Dollar Clicker</a>
             <a href="https://dcjetc.com/meriadec-legal/">Dec</a><a href="https://kilyantual.github.io/">Awikz</a>
         
         </header>
