--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
             <a href="index.html">Reset</a>
             <a id="titre">Dollar Clicker</a>
-            <a href="https://dcjetc.com/meriadec-legal/">Dec</a><a href="https://kilyantual.github.io/">Awikz</a>
+            <a href="https://dcjetc.com/meriadec-legal/" target="_blank" rel="noopener noreferrer">Dec</a><a href="https://kilyantual.github.io/" target="_blank" rel="noopener noreferrer">Awikz</a>
         
         </header>
         <div class="page">
