--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
             <a onclick="verifier()" class="bouton">Reset</a>
             <a id="titre">Dollar Clicker</a>
-            <a onclick="alerter('Partie sauvegardée !');save()" class="bouton">Save Game</a>
+            <a onclick="alerter('Partie sauvegardée !');save()" class="bouton">Sauvegarder</a>
             <a href="https://dcjetc.com/meriadec-legal/" target="_blank" rel="noopener noreferrer" class="bouton links" >Dec</a><a href="https://kilyantual.github.io/" target="_blank" rel="noopener noreferrer" class="bouton links">Awikz</a>
         
         </header>
