--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header id="menu" data-visible="false" class="navigation">
             <nav id="primary-navigation" class="primary-navigation">
-                <a href="geo/index.html" id="titre">Dollar Clicker</a>
+                <p id="titre">Dollar Clicker</p>
                 <a onclick="verifier()" class="bouton">Reset</a>
                 
                 <a onclick="alerter('Partie sauvegardée !');save()" class="bouton">Sauvegarder</a>
